--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head> <link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Sula's Chicken</title>
+	<title>Wellness Center</title>
 </head>
 <body>
-	<h1>Sula's Chicken</h1>
-	<p>This is the headqaurters of Sula's restuarant.</p>
+	<h1>Wellness Center</h1>
+	<p>This is the wellness center of Amie Schwedock.</p>
 
 </body>
 </html>
