--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style.css">
+<head> 
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Wellness Center</title>
 </head>
 <body>
