--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style.css">
-	<title>Wellness Center</title>
+<head>
+	<title>Wellness Center by Amie Schwedock</title>
+	<h1>Wellness Center by Amie Schwedock</h1>
+	<p><wellness center is the natural beauty;
+	class="hero_img"><img src="https://www.sccgov.org/sites/reentry/governance/PublishingImages/Health%202.jpg"; aligh=center>
+</p>
+		Wellness for everyday life.
 </head>
 <body>
-	<h1>Wellness Center</h1>
-	<p>This is the wellness center of Amie Schwedock.</p>
-
+<p>Contact me!</p>
 </body>
 </html>
